# d3vx

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
src/: event.rs  lib.rs  main.rs
src/agent/: activity.rs  compact_agent.rs  cost.rs  cost_tests.rs  doom_loop.rs  doom_loop_tests.rs  guard.rs  logger.rs  mod.rs  prompt.rs  session.rs  specialists_tests.rs  step_controller.rs  step_controller_tests.rs
src/app/: agent.rs  commands.rs  dashboard_bridge.rs  event_forwarder.rs  init.rs  inline_agents.rs  mod.rs  parallel_batches.rs  runner.rs  session_state_persister.rs  sessions.rs  task_views.rs  update.rs  vex_agent_poller.rs
src/cli/: args.rs  mod.rs
src/config/: auth.rs  defaults.rs  flags.rs  keychain.rs  mod.rs  onboarding.rs  security.rs
src/coordination/: agent_tools.rs  board.rs  errors.rs  inbox.rs  io.rs  mod.rs  prompt.rs  task.rs  tool_impls.rs
src/evals/: agent_loop_driver.rs  environment.rs  grader.rs  metrics.rs  mod.rs  result.rs  runner.rs  task.rs
src/hooks/: checks.rs  engine.rs  mod.rs  prompt.rs  registry.rs  types.rs
src/ipc/: client.rs  mod.rs  protocol.rs  types.rs
src/lsp/: bridge.rs  client.rs  completion.rs  diagnostics.rs  goto_def.rs  mod.rs
src/mcp/: client.rs  manager.rs  mod.rs  protocol.rs
src/metrics/: counters.rs  gauges.rs  histograms.rs  mod.rs
src/notifications/: mod.rs  router.rs  telegram.rs  types.rs
src/pipeline/: README.md  checkpoint.rs  classifier.rs  conflicts.rs  docs_completeness.rs  issue_coordinator.rs  issue_picker.rs  issue_runner.rs  merge_gate.rs  metrics.rs  mod.rs  ownership.rs  permission.rs  post_pr.rs  pr_ci_loop.rs  qa_integration.rs  qa_loop.rs  queue_manager.rs  recovery.rs  recovery_manager.rs  review_gate.rs  review_response.rs  review_summary.rs  risk_assessment.rs  runtime.rs  scheduler.rs  semantic_merge.rs  snapshot_policy.rs  state_machine.rs  task_factory.rs  timeout.rs  tool_permissions.rs  trust_parser.rs  validation_summary.rs  vex_manager.rs  workspace_hooks.rs
src/planner/: advance.rs  decision.rs  errors.rs  markdown.rs  mod.rs  phase.rs  plan.rs  preamble.rs
src/plugin/: core.rs  mod.rs  registry.rs  slots.rs
src/providers/: mod.rs  models.rs  pricing_cache.rs  registry.rs  traits.rs  types.rs
src/recovery/: crash_detector.rs  escalation.rs  idempotency.rs  mod.rs  session_restorer.rs  status.rs
src/services/: mod.rs
src/skills/: discovery.rs  executor.rs  loader.rs  mod.rs  registry.rs  resolver.rs  types.rs
src/store/: database.rs  message.rs  migrations.rs  mod.rs  tool_execution.rs  tool_permissions.rs  worker.rs
src/team/: coordinator.rs  message_bus.rs  mod.rs  workspace.rs
src/tools/: background_task.rs  bash.rs  complete.rs  (+32 more)
tests/: inline_agent_edge_cases.rs  inline_agent_prompt_behavior.rs  inline_agent_state_flow.rs  inline_agent_test.rs
(+566 files in other folders)
