[package]
name = "d3vx"
version = "0.1.0"
edition = "2021"
authors = ["d3vx team"]
description = "High-performance autonomous software engineering CLI"
license-file = "LICENSE"
repository = "https://github.com/d3vx/d3vx-terminal"

[features]
default = []
websocket = ["tokio-tungstenite"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
dotenvy = "0.15"

# HTTP client for LLM providers
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
jsonschema = "0.18"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Git operations
git2 = "0.19"

# File operations
glob = "0.3"
globwalk = "0.9"
regex = "1.10"
walkdir = "2.5"
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }

# Web dashboard (embedded HTTP API + SSE)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
include_dir = "0.7"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Markdown rendering
pulldown-cmark = "0.11"
syntect = "5.2"

# Unicode handling
unicode-width = "0.2"
unicode-segmentation = "1.12"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Tree-sitter for code analysis
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"

# Directory paths
dirs = "5.0"

# Lazy static initialization
once_cell = "1.20"

# Diffing
similar = { version = "2.6.0", features = ["inline", "text"] }

# Terminal detection
atty = "0.2"

# System calls
libc = "0.2"

# Random number generation

# Mutex/Synchronization
parking_lot = "0.12"

# WebSocket support
tokio-tungstenite = { version = "0.26", optional = true }
futures-util = "0.3"
url = "2.5"
lsp-types = "0.97.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"
pretty_assertions = "1"
tempfile = "3"
tower = "0.5"
http = "1"
serial_test = "3"

[profile.release]
# Optimize for size and speed
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.fast-release]
inherits = "release"
lto = false
opt-level = 2
codegen-units = 16
incremental = true
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "d3vx"
path = "src/main.rs"
